# Word-Frequency-Report-Service

./: README.md  pyproject.toml
result/: report_empty.txt_20260401_111549.xlsx  report_large_file.txt_20260401_110914.xlsx  report_large_file.txt_20260401_111159.xlsx  report_large_file.txt_20260401_111218.xlsx  report_large_file.txt_20260401_111514.xlsx  report_large_file.txt_20260401_111549.xlsx  report_meanchilltest_01_04_2026_12_15_35.xlsx  report_test.txt_20260401_110913.xlsx  report_test.txt_20260401_110914.xlsx  report_test.txt_20260401_111159.xlsx  report_test.txt_20260401_111217.xlsx  report_test.txt_20260401_111218.xlsx  report_test.txt_20260401_111514.xlsx  report_test.txt_20260401_111548.xlsx  report_test.txt_20260401_111549.xlsx  report_Новыйтекстовыйдокумент2_01_04_2026_12_14_09.xlsx
src/: main.py
src/application/: services.py  use_cases.py
src/domain/: config.py  entities.py  interfaces.py
src/infrastructure/: excel_repository.py  file_processor.py  lemmatizer.py
src/presentation/: routers.py
